--- a/ZooManagementWinApp/CageShopWinApp.csproj
+++ b/ZooManagementWinApp/CageShopWinApp.csproj
@@ -10,6 +10,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessObject\BusinessObject.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
 </Project>
