fixed references and namespace

--- a/BusinessObject/appsettings.json
+++ b/BusinessObject/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "CageShopDB": "Server=(local);User ID=sa;Password=12345;Database=CageShopUni_ala;Trusted_Connection=False;"
+    "CageShopDB": "Data Source=(local);Initial Catalog=CageShopUni_ala;Persist Security Info=True;User ID=sa;Password=12345"
   }
 }
